[tool.poetry]
name = "ola_project"
version = "0.1.0"
description = "Project for the Online Learning Application course"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
scikit-learn = "^1.1.1"
tqdm = "^4.64.0"
networkx = "^2.8.5"
ipykernel = "^6.15.1"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
